fix: image z-index

--- a/src/scss/banners/homeBanner3.scss
+++ b/src/scss/banners/homeBanner3.scss
@@ -8,7 +8,6 @@
     width: 85%;
     margin: 0 auto;
     position: relative;
-    z-index: 1;
     .overlay {
       position: absolute;
       top: 0;
